--- a/ZooApp/zoo/templates/animals_in_placements.html
+++ b/ZooApp/zoo/templates/animals_in_placements.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Animals in placement
+    Животные в помещениях
 {% endblock %}
 
 {% block content %}
